--- a/Application/Home/View/index/detail.html
+++ b/Application/Home/View/index/detail.html
@@ -16,3 +16,11 @@
     <p class="ad_cptd">注意事项：</p>
     <div class="ad_zysx_u ad_cptd_u">{$goods.notice}</div>
 </block>
+<block name="footer">
+<div class="footer">
+    <a class="ft_2" href="{:U('home/index/index')}"><img class="ft_1" src="__PUBLIC__/home/img/tb-8.png"/><p class="ft_z">首页</p></a>
+    <a class="ft_3" href="{:U('home/index/info')}"><img class="ft_1" src="__PUBLIC__/home/img/tb-5.png"/><p class="ft_z">我的</p></a>
+    <a class="ft_5" href="__URL__/addCart?gid={$goods.id}"><p class="ft_zgwc">加入购物车</p></a>
+    <a class="ft_6" href="#"><p class="ft_zgm">立即购买</p></a>
+</div>
+</block>
