--- a/Application/Admin/View/user/edit.html
+++ b/Application/Admin/View/user/edit.html
@@ -28,7 +28,7 @@
 						<div class="form-group">
 							<label for="selector1" class="col-sm-2 control-label">权限</label>
 							<div class="col-sm-8">
-								<select name="auth" id="selector1" class="form-control1">
+								<select name="role" id="selector1" class="form-control1">
 									<option value="0">未激活</option>
 									<option value="1">管理员</option>
 									<option value="2">普通会员</option>
@@ -39,7 +39,7 @@
 					        <label for="txtarea1" class="col-sm-2 control-label">头像</label>
 							<div class="col-sm-8">
 						        <input type="file" name="pic">
-						        <img src="__ROOT__/Public/Uploads/{$vo['pic']}" style="width:50px;" alt="">
+						        <img src="__ROOT__/Public/Uploads/user/{$vo['pic']}" style="width:50px;" alt="">
 					        </div>
 					    </div>
 					    <div class="form-group">
