--- a/Application/Home/View/index/cart.html
+++ b/Application/Home/View/index/cart.html
@@ -1,82 +1,108 @@
 <extend name="layout/home" />
-<block name="title"><title>购物车-汇盟通宝科技</title></block>
+<block name="title"><title>购物车</title></block>
 <block name="header">
+<style type="text/css">
+.jumbotron {
+    background-color: #eee;
+    color: inherit;
+    margin-top:130px;
+    margin-bottom: 30px;
+    padding: 30px 15px;
+}
+.jumbotron p {
+    font-size: 21px;
+    font-weight: 200;
+    margin-bottom: 15px;
+    margin-left:40%;
+}
+</style>
 	<div class="header">
     	<p class="hd_gwc">购物车</p>
         <p class="hd_gwc_bj">编辑</p>
         <img class="hd_r" src="__PUBLIC__/home/img/tb-3.png"/>
     </div>
 </block>
-<block name="content">    
+<block name="content">
+
+    <form action="__URL__/commit" method="post">
     <ul class="gwc_pp">
-    	<li>
-        	<div class="gwc_pp_t">
-                <form><input class="gwc_ft_an1" type="radio"/></form>
-                <img class="gwc_pic" src="__PUBLIC__/home/img/logo-al.png"/>
-                <p class="gwc_p1">安利&gt;</p>
-                <p class="gwc_p2">编辑</p>
-            </div>
-        	<ul class="gwc_sp">
+        <if condition="!empty($_SESSION['pv_cart'])">
+            <foreach name="cart" item="vo">
             	<li>
-                	<form><input class="gwc_ft_an2" type="radio"/></form>
-                	<img class="gwc_pic_cp" src="__PUBLIC__/home/img/Anli/安利产品详情页_03.jpg"/>
-                    <div class="gwc_cp_xs">
-                        <p class="gwc_p3">安利多种植物蛋白粉(770克)</p>
-                        <p class="gwc_p4">&yen;560.00</p>
-                        <p class="gwc_p5">&times;1</p>
-                        <p class="gwc_p6">通粉优惠：&yen;400+160PV</p>
-                    </div>
-                    <div class="gwc_cp_yc">
-                    	<div class="gwc_yc_l">
-                        	<div class="gwc_yc_lt">
-                            	<div class="gwc_yc_ltl">&ndash;</div>
-                                <div class="gwc_yc_ltm">1</div>
-                                <div class="gwc_yc_ltl">+</div>
+                	<ul class="gwc_sp">
+                    	<li>
+                        	<input value="{$key}" name="dx" class="gwc_ft_an2" type="checkbox"/>
+                        	<img class="gwc_pic_cp" src="__PUBLIC__/Uploads/goods/{$vo.pic}"/>
+                            <div class="gwc_cp_xs">
+                                <p class="gwc_p3">{$vo.gname}({$vo.size})</p>
+                                <p class="gwc_p4">&yen;{$vo.price}</p>
+                                <p class="gwc_p5">&times;{$vo.count}</p>
+                                <p class="gwc_p6">通粉优惠：&yen;{$vo.fprice}+{$vo.pv}PV</p>
                             </div>
-                            <div class="gwc_yc_lb">安利多种植物蛋白粉(770克)</div>
-                        </div>
-                        <div class="gwc_yc_r">删除</div>
-                    </div>
+                            <div class="gwc_cp_yc">
+                            	<div class="gwc_yc_l">
+                                	<div class="gwc_yc_lt">
+                                    	<div class="gwc_yc_ltl">&ndash;</div>
+                                        <div class="gwc_yc_ltm">1</div>
+                                        <div class="gwc_yc_ltl">+</div>
+                                    </div>
+                                    <div class="gwc_yc_lb">{$vo.gname}({$vo.size})</div>
+                                </div>
+                                <div class="gwc_yc_r">删除</div>
+                            </div>
+                        </li>
+                    </ul>
                 </li>
-            </ul>
-        </li>
-        <li>
-            <div class="gwc_pp_t">
-                <form><input class="gwc_ft_an1" type="radio"/></form>
-                <img class="gwc_pic" src="__PUBLIC__/home/img/logo-ah.png"/>
-                <p class="gwc_p1">安惠&gt;</p>
-                <p class="gwc_p2">编辑</p>
+            </foreach>
+        <else />
+            <div class="jumbotron">
+              <p>您的购车暂无商品</p>
+              <br>
+              <p style="float:right;padding-right:8%"><a href="__URL__/search">去购物</a></p>
             </div>
-        	<ul class="gwc_sp">
-            	<li>
-                	<form><input class="gwc_ft_an2" type="radio"/></form>
-                	<img class="gwc_pic_cp" src="__PUBLIC__/home/img/Anli/安利产品详情页_03.jpg"/>
-                    <div class="gwc_cp_xs">
-                        <p class="gwc_p3">安利多种植物蛋白粉(770克)</p>
-                        <p class="gwc_p4">&yen;560.00</p>
-                        <p class="gwc_p5">&times;1</p>
-                        <p class="gwc_p6">通粉优惠：&yen;400+160PV</p>
-                    </div>
-                    <div class="gwc_cp_yc">
-                    	<div class="gwc_yc_l">
-                        	<div class="gwc_yc_lt">
-                            	<div class="gwc_yc_ltl">&ndash;</div>
-                                <div class="gwc_yc_ltm">1</div>
-                                <div class="gwc_yc_ltl">+</div>
-                            </div>
-                            <div class="gwc_yc_lb">安利多种植物蛋白粉(770克)</div>
-                        </div>
-                        <div class="gwc_yc_r">删除</div>
-                    </div>
-                </li>
-            </ul>
-        </li>
+        </if>
     </ul>
+
     <div class="gwc_ft">
-        <form><input class="gwc_ft_an" type="radio"/></form>
+        <form><input name="all" class="gwc_ft_an" type="checkbox" /></form>
         <p class="gwc_p7">全选</p>
         <p class="gwc_p8">合计：</p>
         <p class="gwc_p9">&yen;0</p>
-        <p class="gwc_p10">结算&nbsp;(0)</p>
+        <button>结算&nbsp;(0)</button>
     </div>
+        </form>
+    <script type="text/javascript">
+    $(function(){
+        var l = $("input[name=dx]").length;
+        // var arr =[];
+        // (取消)全选
+        $('input[name=all]').click(function(){
+            var flag = $(this).attr('checked');
+            if(flag){
+                $(this).attr('checked','checked');
+                $('ul .gwc_ft_an2').attr('checked','checked');
+            }else{
+                $(this).removeAttr('checked');
+                $('ul .gwc_ft_an2').removeAttr('checked');
+            }
+        });
+        for(var i = 0;i<l;i++)
+        {
+            $("input[name=dx]").click(function(){
+                var num = 0;
+                for(var j = 0 ;j<l;j++){
+                    if($("input[name=dx]").eq(j).attr('checked'))
+                    {
+                        num++;
+                    }
+                    if(l == num){
+                        $('input[name=all]').attr('checked','checked');
+                    }else{
+                        $('input[name=all]').removeAttr('checked');
+                    }
+                }
+            });
+        }
+    });
+    </script>
 </block>
