--- a/Application/Admin/View/goods/add.html
+++ b/Application/Admin/View/goods/add.html
@@ -54,7 +54,7 @@
 						<div class="form-group">
 							<label for="focusedinput" class="col-sm-2 control-label">积分价</label>
 							<div class="col-sm-8">
-								<input class="form-control1" id="focusedinput" placeholder="请输入商品优惠价" type="text" name="pv">
+								<input class="form-control1" disabled id="focusedinput" placeholder="请输入商品优惠价" type="text" name="pv">
 							</div>
 						</div>
 						<div class="form-group">
@@ -114,8 +114,37 @@
 	  	</div>
 	</div>
 <script type="text/javascript">
+$(function(){
+	var price_i = 0;
+	var fprice_i = 0;
+	 $('input[name=price]').keyup(function(){
+	 	var price = $(this).val();
+	 	price_i = parseFloat(price);
+	 }).blur(function(){
+	 	var aaa = price_i - fprice_i;
+	 	if(aaa<0){
+			alert('商品正价不能小于优惠价');
+			$('input[name=pv]').val('');
+		}else{
+			$('input[name=pv]').val(aaa);
+		}
+	 });
+	 $('input[name=fprice]').keyup(function(){
+	 	var fprice = $(this).val();
+	 	fprice_i = parseFloat(fprice);
+	 }).blur(function(){
+	 	var aaa = price_i - fprice_i;
+		if(aaa<0){
+			alert('商品正价不能小于优惠价');
+			$('input[name=pv]').val('');
+		}else{
+			$('input[name=pv]').val(aaa);
+		}
+	});
+
      var ue1 = UE.getEditor('editor1');
      var ue2 = UE.getEditor('editor2');
      var ue3 = UE.getEditor('editor3');
+});
 </script>
 </block>
