--- a/Application/Home/View/layout/home.html
+++ b/Application/Home/View/layout/home.html
@@ -3,17 +3,17 @@
 <head>
 <meta charset="utf-8">
 <block name="title"><title>安利多种植物蛋白粉(770克)</title></block>
-<meta name="viewport" content="width=divice-width minimum-scale=1.0 maximum-scale=1.0 user-scalable=no"/>
+<meta name="viewport" content="width=divice-width,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no"/>
 <link href="__PUBLIC__/home/css/Throughsetting.css" type="text/css" rel="stylesheet"/>
 <link href="__PUBLIC__/home/css/index.css" type="text/css" rel="stylesheet"/>
 <link href="__PUBLIC__/home/css/weui.css" type="text/css" rel="stylesheet"/>
 <link href="__PUBLIC__/home/css/order.css" type="text/css" rel="stylesheet" />
 <link href="__PUBLIC__/home/css/common.css" type="text/css" rel="stylesheet" />
-<script src="__PUBLIC__/home/js/order.js" type="text/javascript"></script>
 <link href="__PUBLIC__/home/css/swiper-3.4.1.min.css" rel="stylesheet" />
 <script src="__PUBLIC__/home/js/jquery-1.8.3.min.js" language="javascript"></script>
 <script src="__PUBLIC__/home/js/swiper-3.4.1.min.js"></script>
 <script src="__PUBLIC__/home/js/js.js"></script>
+<script src="__PUBLIC__/home/js/order.js" type="text/javascript"></script>
 </head>
 <body>
 	<block name="header">
