--- a/Public/home/css/Throughsetting.css
+++ b/Public/home/css/Throughsetting.css
@@ -5,5 +5,5 @@ a{text-decoration:none;}
 
 .weui_cell_hd img{width:26px;margin-right:5px;}
 .pull-right img{width:26px; margin-left:10px;}
-.weui_cell_bd input{width: 100%; height: 30px; border:none; text-align: center; background:url(../Img/icon/tb-2.png) no-repeat 30%; background-size:26px 22px; color: #bfbfbf;}
+.weui_cell_bd input{width: 100%; height: 30px; border:none; text-align: center; background:url(../img/tb-2.png) no-repeat 30%; background-size:26px 22px; color: #bfbfbf;}
 .inlg_pic{ width: 100%;}
